dev(cli): compile typst to static svg

--- a/themes/typst-book/index.hbs
+++ b/themes/typst-book/index.hbs
@@ -243,6 +243,7 @@
 
         </div>
 
+        <script src="{{ path_to_root }}svg_utils.js"></script>
         <script>
           (function sidebar() {
     var html = document.querySelector("html");
