dev: complete theme support for typst

--- a/themes/mdbook/index.hbs
+++ b/themes/mdbook/index.hbs
@@ -161,7 +161,7 @@
                 return _theme;
             }
             window.isTypstLightTheme = function isLightTheme(theme) {
-                return theme === 'light';
+                return theme === 'light' || theme === 'rust';
             }
             var theme = getTypstTheme();
             // todo: consistent theme between html and typst
