--- a/themes/mdbook/index.hbs
+++ b/themes/mdbook/index.hbs
@@ -98,7 +98,27 @@
         });
     </script>
 
-    <script type="module" src="{{ path_to_root }}typst-main.js"></script>
+    <script id="typst-main-js" type="module" src="{{ path_to_root }}typst-main.js"></script>
+    <script>
+        window.typstChangeTheme = () => { };
+
+        var typstMainJsLoaded = new Promise((resolve, reject) => {
+            document.getElementById('typst-main-js').addEventListener('load', resolve);
+            document.getElementById('typst-main-js').addEventListener('error', reject);
+        });
+
+        window.typstRenderModuleReady = typstMainJsLoaded.then(() => {
+            var typstRenderModule = window.typstRenderModule =
+                window.TypstRenderModule.createTypstSvgRenderer();
+            console.log(typstRenderModule);
+            return typstRenderModule
+                .init({
+                    getModule: () => '{{ renderer_module }}',
+                }).then(() => typstRenderModule);
+        }).catch((err) => {
+            console.error('typst-main.js failed to load', err);
+        });
+    </script>
 
 </head>
 
@@ -112,25 +132,39 @@
 
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
         <script>
+            // reserved util next major release
             try {
-                var theme = localStorage.getItem('mdbook-theme');
-                var sidebar = localStorage.getItem('mdbook-sidebar');
+                localStorage.removeItem('mdbook-theme');
+                localStorage.removeItem('mdbook-sidebar');
+            } catch (e) { }
+            try {
+                var theme = localStorage.getItem('typst-book-theme');
+                var sidebar = localStorage.getItem('typst-book-sidebar');
 
                 if (theme.startsWith('"') && theme.endsWith('"')) {
-                    localStorage.setItem('mdbook-theme', theme.slice(1, theme.length - 1));
+                    localStorage.setItem('typst-book-theme', theme.slice(1, theme.length - 1));
                 }
 
                 if (sidebar.startsWith('"') && sidebar.endsWith('"')) {
-                    localStorage.setItem('mdbook-sidebar', sidebar.slice(1, sidebar.length - 1));
+                    localStorage.setItem('typst-book-sidebar', sidebar.slice(1, sidebar.length - 1));
                 }
             } catch (e) { }
         </script>
 
         <!-- Set the theme before any content is loaded, prevents flash -->
         <script>
-            var theme;
-            try { theme = localStorage.getItem('mdbook-theme'); } catch (e) { }
-            if (theme === null || theme === undefined) { theme = default_theme; }
+            window.getTypstTheme = function getTypstTheme() {
+                var _theme;
+                try { _theme = localStorage.getItem('typst-book-theme'); } catch (e) { }
+                if (_theme === null || _theme === undefined) { _theme = default_theme; }
+                window.typstBookTheme = _theme;
+                return _theme;
+            }
+            window.isTypstLightTheme = function isLightTheme(theme) {
+                return theme === 'light' || theme === 'rust';
+            }
+            var theme = getTypstTheme();
+            // todo: consistent theme between html and typst
             var html = document.querySelector('html');
             html.classList.remove('no-js')
             html.classList.remove('{{ default_theme }}')
@@ -143,7 +177,7 @@
             var html = document.querySelector('html');
             var sidebar = null;
             if (document.body.clientWidth >= 1080) {
-                try { sidebar = localStorage.getItem('mdbook-sidebar'); } catch (e) { }
+                try { sidebar = localStorage.getItem('typst-book-sidebar'); } catch (e) { }
                 sidebar = sidebar || 'visible';
             } else {
                 sidebar = 'hidden';
@@ -303,121 +337,7 @@
         </div>
 
         <script src="{{ path_to_root }}svg_utils.js"></script>
-        <script>
-            (function sidebar() {
-                var html = document.querySelector("html");
-                var sidebar = document.getElementById("sidebar");
-                var sidebarLinks = document.querySelectorAll('#sidebar a');
-                var sidebarToggleButton = document.getElementById("sidebar-toggle");
-                var sidebarResizeHandle = document.getElementById("sidebar-resize-handle");
-                var firstContact = null;
-
-                function showSidebar() {
-                    html.classList.remove('sidebar-hidden')
-                    html.classList.add('sidebar-visible');
-                    Array.from(sidebarLinks).forEach(function (link) {
-                        link.setAttribute('tabIndex', 0);
-                    });
-                    sidebarToggleButton.setAttribute('aria-expanded', true);
-                    sidebar.setAttribute('aria-hidden', false);
-                    try { localStorage.setItem('mdbook-sidebar', 'visible'); } catch (e) { }
-                }
-
-
-                var sidebarAnchorToggles = document.querySelectorAll('#sidebar a.toggle');
-
-                function toggleSection(ev) {
-                    ev.currentTarget.parentElement.classList.toggle('expanded');
-                }
-
-                Array.from(sidebarAnchorToggles).forEach(function (el) {
-                    el.addEventListener('click', toggleSection);
-                });
-
-                function hideSidebar() {
-                    html.classList.remove('sidebar-visible')
-                    html.classList.add('sidebar-hidden');
-                    Array.from(sidebarLinks).forEach(function (link) {
-                        link.setAttribute('tabIndex', -1);
-                    });
-                    sidebarToggleButton.setAttribute('aria-expanded', false);
-                    sidebar.setAttribute('aria-hidden', true);
-                    try { localStorage.setItem('mdbook-sidebar', 'hidden'); } catch (e) { }
-                }
-
-                // Toggle sidebar
-                sidebarToggleButton.addEventListener('click', function sidebarToggle() {
-                    if (html.classList.contains("sidebar-hidden")) {
-                        var current_width = parseInt(
-                            document.documentElement.style.getPropertyValue('--sidebar-width'), 10);
-                        if (current_width < 150) {
-                            document.documentElement.style.setProperty('--sidebar-width', '150px');
-                        }
-                        showSidebar();
-                    } else if (html.classList.contains("sidebar-visible")) {
-                        hideSidebar();
-                    } else {
-                        if (getComputedStyle(sidebar)['transform'] === 'none') {
-                            hideSidebar();
-                        } else {
-                            showSidebar();
-                        }
-                    }
-                });
-
-                sidebarResizeHandle.addEventListener('mousedown', initResize, false);
-
-                function initResize(e) {
-                    window.addEventListener('mousemove', resize, false);
-                    window.addEventListener('mouseup', stopResize, false);
-                    html.classList.add('sidebar-resizing');
-                }
-                function resize(e) {
-                    var pos = (e.clientX - sidebar.offsetLeft);
-                    if (pos < 20) {
-                        hideSidebar();
-                    } else {
-                        if (html.classList.contains("sidebar-hidden")) {
-                            showSidebar();
-                        }
-                        pos = Math.min(pos, window.innerWidth - 100);
-                        document.documentElement.style.setProperty('--sidebar-width', pos + 'px');
-                    }
-                }
-                //on mouseup remove windows functions mousemove & mouseup
-                function stopResize(e) {
-                    html.classList.remove('sidebar-resizing');
-                    window.removeEventListener('mousemove', resize, false);
-                    window.removeEventListener('mouseup', stopResize, false);
-                }
-
-                document.addEventListener('touchstart', function (e) {
-                    firstContact = {
-                        x: e.touches[0].clientX,
-                        time: Date.now()
-                    };
-                }, { passive: true });
-
-                document.addEventListener('touchmove', function (e) {
-                    if (!firstContact)
-                        return;
-
-                    var curX = e.touches[0].clientX;
-                    var xDiff = curX - firstContact.x,
-                        tDiff = Date.now() - firstContact.time;
-
-                    if (tDiff < 250 && Math.abs(xDiff) >= 150) {
-                        if (xDiff >= 0 && firstContact.x < Math.min(document.body.clientWidth * 0.25, 300))
-                            showSidebar();
-                        else if (xDiff < 0 && curX < 300)
-                            hideSidebar();
-
-                        firstContact = null;
-                    }
-                }, { passive: true });
-            })();
-
-        </script>
+        <script src="{{ path_to_root }}index.js"></script>
 
     </div>
 </body>
