build: upgrade typst.ts to v0.4.0-rc3

--- a/themes/mdbook/index.hbs
+++ b/themes/mdbook/index.hbs
@@ -110,7 +110,7 @@
 
         window.typstRenderModuleReady = typstBookJsLoaded.then(() => {
             var typstRenderModule = window.typstRenderModule =
-                window.TypstRenderModule.createTypstSvgRenderer();
+                window.TypstRenderModule.createTypstRenderer();
             return typstRenderModule
                 .init({
                     getModule: () => undefined,
