feat: create semantic label for headings

--- a/themes/mdbook/index.hbs
+++ b/themes/mdbook/index.hbs
@@ -98,6 +98,7 @@
         });
     </script>
 
+    {{!-- <script id="typst-book-js" type="module" src="/dev/frontend/dist/book.mjs"></script> --}}
     <script id="typst-book-js" type="module" src="{{ path_to_root }}typst-book.js"></script>
     <script>
         window.typstRerender = () => { };
