--- a/themes/mdbook/index.hbs
+++ b/themes/mdbook/index.hbs
@@ -129,6 +129,7 @@
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "{{ path_to_root }}";
+            window.typstPathToRoot = path_to_root;
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "{{ preferred_dark_theme }}" : "{{ default_theme }}";
         </script>
 
