build: bump typst.ts to v0.5.0-rc7

--- a/themes/mdbook/css/general.css
+++ b/themes/mdbook/css/general.css
@@ -274,7 +274,9 @@ kbd {
 }
 
 .typst-html-semantics span {
-  transform-origin: left;
+  color: transparent;
+  font-family: monospace;
+  transform-origin: left top;
   position: absolute;
   display: inline-block;
   left: 0;
