--- a/themes/starlight/index.hbs
+++ b/themes/starlight/index.hbs
@@ -234,7 +234,7 @@
                         {{/if}}
                     </div>
 
-                    <h1 class="menu-title">{{ book_title }}</h1>
+                    <h1 class="menu-title">{{ book_title }} 123</h1>
 
                     <div class="right-buttons">
                         {{#if print_enable}}
