--- a/themes/starlight/css/chrome.css
+++ b/themes/starlight/css/chrome.css
@@ -436,7 +436,7 @@ ul#searchresults span.teaser em {
 @media only screen and (min-width: 620px) {
   .sidebar-visible .page-wrapper {
     transform: none;
-    margin-left: var(--sidebar-width);
+    /* margin-left: var(--sidebar-width); */
   }
 }
 
