--- a/themes/starlight/css/general.css
+++ b/themes/starlight/css/general.css
@@ -137,9 +137,11 @@ h6:target::before {
   padding: 0 5px 50px 5px;
 }
 .content main {
-  margin-left: auto;
+  margin: 0 2rem;
+
+  /* margin-left: auto;
   margin-right: auto;
-  max-width: var(--content-max-width);
+  max-width: var(--content-max-width); */
 }
 .content p {
   line-height: 1.45em;
