--- a/themes/starlight/styles/reset.css
+++ b/themes/starlight/styles/reset.css
@@ -30,9 +30,41 @@ body {
 }
 
 h1 {
-    display: block;
-    margin-block-start: 1rem;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    unicode-bidi: isolate;
+  margin-block-start: 1rem;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  line-height: 1;
+}
+h2 {
+  font-size: 2rem;
+  margin-block-start: 1.6rem;
+  margin-block-end: 0.6rem;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  line-height: 1.3333333;
+}
+h3 {
+  font-size: 1.5rem;
+  margin-block-start: 1.5rem;
+  margin-block-end: 0.6rem;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  line-height: 1.45;
+}
+h4 {
+  font-size: 1.25rem;
+  margin-block-start: 1.5rem;
+  margin-block-end: 0.6rem;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  line-height: 1.6;
+}
+h5 {
+  font-size: 1.1rem;
+  margin-block-start: 1.5rem;
+  margin-block-end: 0.5rem;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  line-height: 1.5;
 }
