feat: rewrite mdbook theme to pure typst (#168)
* feat: rewrite mdbook  theme to pure typst

* x

* feat: impl page.typ

* feat: clean up cli

* feat: impl page-sidebar

* feat: stage changes

* fix: lost code

* feat: load html trampoline is not needed

* feat: clean up

* dev: remove main fonts

* dev: remove space

* feat: framework correctly

* feat: recover paged export

* fix: build errors

* fix: add warns

* fix: paged export

--- a/themes/mdbook/css/general.css
+++ b/themes/mdbook/css/general.css
@@ -411,3 +411,19 @@ a.focus {
   transition: 0.1s;
   transition-property: fill, stroke, color;
 }
+
+.typst-app { position: relative; }
+	
+.code-image.themed .light {
+  display: none;
+}
+.code-image.themed .dark {
+  display: initial;
+}
+:root[data-theme='light'] .code-image.themed .light{
+  display: initial;
+}
+
+:root[data-theme='light'] .code-image.themed .dark {
+  display: none;
+}
