--- a/themes/mdbook/css/chrome.css
+++ b/themes/mdbook/css/chrome.css
@@ -73,6 +73,11 @@ a > .hljs {
   cursor: pointer;
   transition: color 0.5s;
 }
+
+#menu-bar .right-buttons svg.fa {
+  padding: calc(var(--menu-bar-height) / 2 - 0.5em) 8px;
+}
+
 @media only screen and (max-width: 420px) {
   #menu-bar svg.fa,
   #menu-bar .icon-button {
